--- a/Landing page code along/index.html
+++ b/Landing page code along/index.html
@@ -4,20 +4,20 @@
 <head>
 
     <title>Landing Page</title>
-    <link href="styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <h1>Good Morning Will!</h1>
     <h2>What is your main focus for today?</h2>
-    <p>Learn more about Computing Science</p>
+    <p id="focus">Learn more about Computing Science</p>
 
     <hr>
-    <p>"I have not failed. I've just found 10,000 ways that won't work!"</p>
+    <p id="quote">"I have not failed. I've just found 10,000 ways that won't work!"</p>
     <p>- Thomas A. Edison</p>
     <hr>
 
-    <img src="img/light-bulb.png"
+    <img src="img/light-bulb.png" alt="Light Bulb" width="40px"
 </body>
 
 </html>
