lzanding page js

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 
 <body>
-    <h1>Good Morning Will!</h1>
+    <h1>Good Morning <span id="nameSpan">Will</span>!</h1>
     <h2>What is your main focus for today?</h2>
-    <p id="focus">Learn more about Computing Science</p>
+    <p id="focusP">Learn more about Computing Science</p>
 
     <hr>
     <p id="quote">"I have not failed. I've just found 10,000 ways that won't work!"</p>
     <p>- Thomas A. Edison</p>
     <hr>
 
-    <img src="img/light-bulb.png" alt="Light Bulb" width="40px" 
+    <img src="img/light-bulb.png" alt="Light Bulb" width="40px">
+    <script src="script.js"></script>
 </body>
 
 </html>
